<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DAMPS Fantasy</string>

    <!-- Startseite -->
    <string name="main">DAMPs Fantasy</string>
    <string name="desc">DampsLogo</string>
    <string name="pic_log">Log</string>
    <string name="pic_opt">Options</string>
    <string name="news">News</string>
    <string name="roster">Teams</string>
    <string name="scores">Scores</string>
    <string name="standings">Standings</string>
    <string name="starters">Starters</string>
    <string name="forum">Forum</string>
    <string name="exit">Beenden</string>
    <string name="options">Optionen</string>
    <string name="ok">OK</string>
    <string name="cancel">abbrechen</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="save">angemeldet bleiben</string>
    <string name="membersection">Membersection:</string>
    <string name="messages">Nachrichten</string>

    <!-- Options -->
    <string name="leaguedomain">League Domain</string>
    <string name="number_news">Anzahl der abzurufenden News</string>
    <string name="number_threads">Anzahl der abzurufenden Threads</string>
    <string name="posts">Neuesten Post oben/unten</string>
    <string name="oben">oben</string>
    <string name="unten">unten</string>
    <string name="set">Set</string>
    <string name="news_set">Anzahl der abzurufenden News auf</string>
    <string name="domain_set">Domain auf</string>
    <string name="posts_set">Neuester post wird</string>
    <string name="threads_set">Anzahl der abzurufenden Threads auf</string>
    <string name="setted">gesetzt</string>
    <string name="show">angezeigt</string>

    <!-- Headlines -->
    <string name="News">News</string>

    <!-- Forum -->
    <string name="pic_new">New Thread</string>
    <string name="pic_ref">Refresh</string>

    <!-- New Thread -->
    <string name="new_thread">New Thread</string>
    <string name="pic_acc">Posten</string>
    <string name="title">Title:</string>
    <string name="message">Message:</string>
    <string name="sticky">sticky</string>
    <string name="member">members only</string>
    <string name="pic_rep">Reply</string>

    <!-- New Thread -->
    <string name="new_post">Reply</string>

    <!-- Weekly Scores -->
    <string name="weekly">Weekly Scores</string>

    <!-- Rosterstart -->
    <string name="teamwahl">Bitte Team wählen</string>

    <!-- Headlines -->
    <string name="posten">Posten</string>

    <!-- Messages -->
    <string name="send_message">Send Message</string>
    <string name="new_message">New Message</string>
    <string name="pic_read">Read</string>
    <string name="subject">Subject:</string>
    <string name="mes">Message</string>

    <!-- Teammanagement -->
    <string name="myteam">My Team</string>
    <string name="select">Select Starter</string>
    <string name="releasePlayer">Release Player</string>
    <string name="sign">Sign Free Agent</string>
    <string name="open_trades">Open Trades</string>
    <string name="offer_trade">Offer Trade</string>
    <string name="tradelist">Trade List</string>

    <!-- Set Starter -->
    <string name="set_starters">Select Starter</string>

    <!-- Options -->
    <string name="status">Status</string>

    <!-- Roster -->
    <string name="team">NFL</string>
    <string name="pos">Pos</string>
    <string name="name">Name</string>
    <string name="score">Score</string>
    <string name="gameday">Gamedays</string>
    <string name="domain">"http://www.dampsfootball.com"</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="pic_back">Back</string>
    <string name="half1">1st half of the season</string>
    <string name="half2">2nd half of the season</string>
    <string name="release">release</string>
    <string name="gd1">1.</string>
    <string name="gd2">2.</string>
    <string name="gd3">3.</string>
    <string name="gd4">4.</string>
    <string name="gd5">5.</string>
    <string name="gd6">6.</string>
    <string name="gd7">7.</string>
    <string name="gd8">8.</string>
    <string name="gd9">9.</string>
    <string name="gd10">10.</string>
    <string name="gd11">11.</string>
    <string name="gd12">12.</string>
    <string name="gd13">13.</string>
    <string name="gd14">14.</string>
    <string name="gd15">15.</string>
    <string name="gd16">16.</string>
    <string name="gd17">17.</string>
    
    <!-- Sign Player -->
    <string name="qb">QB</string>
    <string name="rb">RB</string>
    <string name="wr">WR</string>
    <string name="te">TE</string>
    <string name="k">K</string>
    <string name="def">DEF</string>

    <!-- Tags -->
    <string name="start">start</string>
    <string name="kickoff">kickoff</string>
    
    <string name="search_hint">Search names</string>
    

</resources>