<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_home_layout1"
        style="@style/titlebar" >

        <TextView
            android:id="@+id/tv_home_title"
            style="@style/title"
            android:text="@string/main" />

        <ProgressBar
            android:id="@+id/pb_home_bar1"
            style="@style/progressbar"
            android:layout_alignParentRight="false"
            android:layout_toLeftOf="@+id/iv_home_opt" />

        <ImageView
            android:id="@+id/iv_home_opt"
            style="@style/pic_title_mid"
            android:layout_toLeftOf="@+id/iv_home_log"
            android:contentDescription="@string/pic_opt"
            android:onClick="options"
            android:src="@drawable/options" />

        <ImageView
            android:id="@+id/iv_home_log"
            style="@style/pic_title_right"
            android:contentDescription="@string/pic_log"
            android:onClick="log" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rl_home_layout1" >

        <RelativeLayout
            android:id="@+id/rl_home_layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/iv_home_view1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/desc"
                android:src="@drawable/dampsmain" />

            <LinearLayout
                android:id="@+id/ll_home_layout1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/iv_home_view1" >

                <Button
                    android:id="@+id/bu_home_news"
                    style="@style/button"
                    android:onClick="startNews"
                    android:text="@string/news" />

                <Button
                    android:id="@+id/bu_home_forum"
                    style="@style/button"
                    android:onClick="startForum"
                    android:text="@string/forum" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_home_layout2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ll_home_layout1" >

                <Button
                    android:id="@+id/bu_home_scores"
                    style="@style/button"
                    android:onClick="startScores"
                    android:text="@string/scores" />

                <Button
                    android:id="@+id/bu_home_standings"
                    style="@style/button"
                    android:onClick="startStandings"
                    android:text="@string/standings" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_home_layout3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ll_home_layout2" >

                <Button
                    android:id="@+id/bu_home_roster"
                    style="@style/button"
                    android:onClick="startRoster"
                    android:text="@string/roster" />

                <Button
                    android:id="@+id/bu_home_starters"
                    style="@style/button"
                    android:onClick="startStarters"
                    android:text="@string/starters" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_home_member"
                style="@style/desc_edittext"
                android:layout_below="@+id/ll_home_layout3"
                android:text="@string/membersection"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_home_layout5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/tv_home_member" >

                <Button
                    android:id="@+id/bu_home_myteam"
                    style="@style/button"
                    android:onClick="myTeam"
                    android:text="@string/myteam" />

                <Button
                    android:id="@+id/bu_home_open_trades"
                    style="@style/button"
                    android:background="@drawable/button_inactive"
                    android:enabled="false"
                    android:onClick="openTrades"
                    android:text="@string/open_trades" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_home_layout6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ll_home_layout5" >

                <Button
                    android:id="@+id/bu_home_starter"
                    style="@style/button"
                    android:onClick="selectStarter"
                    android:text="@string/select" />

                <Button
                    android:id="@+id/bu_home_offer_trade"
                    style="@style/button"
                    android:background="@drawable/button_inactive"
                    android:enabled="false"
                    android:onClick="offerTrade"
                    android:text="@string/offer_trade" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_home_layout7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ll_home_layout6" >

                <Button
                    android:id="@+id/bu_home_release"
                    style="@style/button"
                    android:onClick="releasePlayer"
                    android:text="@string/releasePlayer" />

                <Button
                    android:id="@+id/bu_home_tradelist"
                    style="@style/button"
                    android:background="@drawable/button_inactive"
                    android:enabled="false"
                    android:onClick="tradelist"
                    android:text="@string/tradelist" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_home_layout8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/ll_home_layout7" >

                <Button
                    android:id="@+id/bu_home_sign"
                    style="@style/button"
                    android:background="@drawable/button_inactive"
                    android:enabled="false"
                    android:onClick="signFreeAgent"
                    android:text="@string/sign" />

                <Button
                    android:id="@+id/bu_home_nachrichten"
                    style="@style/button"
                    android:onClick="startMessages"
                    android:text="@string/messages" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>