<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <RelativeLayout
        android:id="@+id/rl_ros_layout1"
        style="@style/titlebar" >

        <ImageView
            android:id="@+id/iv_ros_back"
            style="@style/pic_title_left" />

        <TextView
            style="@style/title"
            android:layout_toRightOf="@+id/iv_ros_back"
            android:id="@+id/tv_ros_view1" />

        <ProgressBar
            android:id="@+id/pb_ros_bar1"
            style="@style/progressbar" />
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tl_ros_table1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_ros_layout1"
        android:orientation="vertical"
        android:stretchColumns="2" >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                style="@style/column"
                android:onClick="sortTeam"
                android:text="@string/team" />

            <TextView
                style="@style/column"
                android:onClick="sortPos"
                android:text="@string/pos" />

            <TextView
                style="@style/column"
                android:onClick="sortName"
                android:text="@string/name" />

            <TextView
                style="@style/column"
                android:onClick="sortScore"
                android:text="@string/score" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tl_ros_table1" >

        <TableLayout
            android:id="@+id/tl_rostertable"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:stretchColumns="2" >
        </TableLayout>
    </ScrollView>

</RelativeLayout>