<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/rl_newpost_layout1"
        style="@style/titlebar" >

        <ImageView
            android:id="@+id/iv_newpost_back"
            style="@style/pic_title_left" />

        <TextView
            android:id="@+id/tv_newpost_title"
            style="@style/title"
            android:layout_toRightOf="@+id/iv_newpost_back"
            android:text="@string/new_post" />

        <ProgressBar
            android:id="@+id/pb_newpost_bar1"
            style="@style/progressbar"
            android:layout_alignParentRight="false"
            android:layout_toLeftOf="@+id/iv_newpost_accept" />

        <ImageView
            android:id="@+id/iv_newpost_accept"
            style="@style/pic_title_right"
            android:contentDescription="@string/pic_acc"
            android:onClick="post"
            android:src="@drawable/accept" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_newpost_msg"
        style="@style/desc_edittext"
        android:layout_below="@+id/rl_newpost_layout1"
        android:text="@string/message"
        android:paddingLeft="5dp" />

    <EditText
        android:id="@+id/et_newpost_msg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_newpost_msg"
        android:inputType="textMultiLine"
        android:gravity="top|left" />

</RelativeLayout>